--- a/index.html
+++ b/index.html
@@ -5,31 +5,91 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El Alquimista</title>
 </head>
 
 <body>
     <script src="script.js"></script>
 
+    <header>
 
-<h1>Nuestras Bebidas</h1>
-    <p>Fernet.   precio: 1000</p>
-    <p>Vodka Smirnoft.   precio: 1250</p>
-    <p>Vodka Absolut.   precio: 3500</p>
-    <p>Vodka Skyy.   precio: 980</p>
-    <p>Vodka Grey Goose.   precio: 9400</p>
-    <p>Ron Havana Club.   precio: 1900</p>
-    <p>Ron Havana Club 3 años blanco.   precio: 2100</p>
- <p>Ron Havana Club 7 años.   precio: 4650</p>
-<p>Ron malibu.   precio: 2100</p>
-<p>Gin Bombay.   precio: 4100</p>
-<p>Gin Bombay bramble raspberry blackberry.   precio: 5700</p>
-<p>Gin Beefeater.   precio: 3650</p>
-<p>Gin tanqueray.   precio: 3100</p>
-<p>Whisky Jack daniels.   precio: 6890</p>
-<p>Whisky Grants triple wood.   precio: 6100</p>
-<p>Whisky Johnnie walker black label.   precio: 5100</p>
-<p>Whisky Chivas regal 12 años.   precio: 5700</p>
+    </header>
+
+    <main>
+        <h1>Nuestras Bebidas</h1>
+
+        <article>
+            <p>Fernet. precio: 1000</p>
+        </article>
+
+        <article>
+            <p>Vodka Smirnoft. precio: 1250</p>
+        </article>
+
+        <article>
+            <p>Vodka Absolut. precio: 3500</p>
+        </article>
+
+        <article>
+            <p>Vodka Skyy. precio: 980</p>
+        </article>
+
+        <article>
+            <p>Vodka Grey Goose. precio: 9400</p>
+        </article>
+
+        <article>
+            <p>Ron Havana Club. precio: 1900</p>
+        </article>
+
+        <article>
+            <p>Ron Havana Club 3 años blanco. precio: 2100</p>
+        </article>
+
+        <article>
+            <p>Ron Havana Club 7 años. precio: 4650</p>
+        </article>
+
+        <article>
+            <p>Ron malibu. precio: 2100</p>
+        </article>
+
+        <article>
+            <p>Gin Bombay. precio: 4100</p>
+        </article>
+
+        <article>
+            <p>Gin Bombay bramble raspberry blackberry. precio: 5700</p>
+        </article>
+
+        <article>
+            <p>Gin Beefeater. precio: 3650</p>
+        </article>
+
+        <article>
+            <p>Gin tanqueray. precio: 3100</p>
+        </article>
+
+        <article>
+            <p>Whisky Jack daniels. precio: 6890</p>
+        </article>
+
+        <article>
+            <p>Whisky Grants triple wood. precio: 6100</p>
+        </article>
+
+        <article>
+            <p>Whisky Johnnie walker black label. precio: 5100</p>
+        </article>
+
+        <article>
+            <p>Whisky Chivas regal 12 años. precio: 5700</p>
+        </article>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
