--- a/index.html
+++ b/index.html
@@ -6,85 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Alquimista</title>
+    <!-- css -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
-    <script src="script.js"></script>
-
     <header>
-
+        <h1>EL ALQUMISTA BEBIDAS</title>
     </header>
 
     <main>
         <h1>Nuestras Bebidas</h1>
 
-        <article>
-            <p>Fernet. precio: 1000</p>
-        </article>
+        <div id="bebidas" class="row"></div>
 
-        <article>
-            <p>Vodka Smirnoft. precio: 1250</p>
-        </article>
-
-        <article>
-            <p>Vodka Absolut. precio: 3500</p>
-        </article>
-
-        <article>
-            <p>Vodka Skyy. precio: 980</p>
-        </article>
-
-        <article>
-            <p>Vodka Grey Goose. precio: 9400</p>
-        </article>
-
-        <article>
-            <p>Ron Havana Club. precio: 1900</p>
-        </article>
-
-        <article>
-            <p>Ron Havana Club 3 años blanco. precio: 2100</p>
-        </article>
-
-        <article>
-            <p>Ron Havana Club 7 años. precio: 4650</p>
-        </article>
-
-        <article>
-            <p>Ron malibu. precio: 2100</p>
-        </article>
-
-        <article>
-            <p>Gin Bombay. precio: 4100</p>
-        </article>
-
-        <article>
-            <p>Gin Bombay bramble raspberry blackberry. precio: 5700</p>
-        </article>
-
-        <article>
-            <p>Gin Beefeater. precio: 3650</p>
-        </article>
-
-        <article>
-            <p>Gin tanqueray. precio: 3100</p>
-        </article>
-
-        <article>
-            <p>Whisky Jack daniels. precio: 6890</p>
-        </article>
-
-        <article>
-            <p>Whisky Grants triple wood. precio: 6100</p>
-        </article>
-
-        <article>
-            <p>Whisky Johnnie walker black label. precio: 5100</p>
-        </article>
-
-        <article>
-            <p>Whisky Chivas regal 12 años. precio: 5700</p>
-        </article>
+        <script src="script.js"></script>
     </main>
 
     <footer>
