--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
     <header>
-        <h1>EL ALQUMISTA BEBIDAS</title>
+        <h1 class="titulo">EL ALQUMISTA BEBIDAS</title>
+    
+        <img class="carrito" src="" alt="">
     </header>
 
     <main>
