0 avance soy una mierda

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </header>
 
     <main>
-        <h1>Nuestras Bebidas</h1>
+        <h1 class="tituloMain">Nuestras Bebidas</h1>
 
-        <div id="bebidas" class="row"></div>
+        <div id="bebidas"></div>
 
         <script src="script.js"></script>
     </main>
