--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 
     <footer>
 
+        <div class="redesSociales">
+            <div id="instagram"></div>
+            <div id="github"></div>
+        </div>
+
+        <script src="script.js"></script>
+    
     </footer>
 </body>
 
