retoque de csss

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <h1 class="tituloMain">Nuestras Bebidas</h1>
 
-        <div id="bebidas"></div>
+        <div id="bebidas" class="row"></div>
 
         <script src="script.js"></script>
     </main>
