--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Alquimista</title>
+    <!-- icono de ventana -->
+    <link rel="shorcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- css -->
     <link rel="stylesheet" href="styles.css">
     <!-- boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
         <h1 class="titulo">EL ALQUMISTA BEBIDAS</title>
-    
-        <img class="carrito" src="" alt="">
+
+            <img class="carrito" src="" alt="">
     </header>
 
     <main>
@@ -31,12 +32,17 @@
     <footer>
 
         <div class="redesSociales">
-            <div id="instagram"></div>
-            <div id="github"></div>
+            <div class="linkedin">
+                <a href="https://www.linkedin.com/in/teo-ariel-fedyna-lopes-798181232/" target="_blank"><img src="./images/linkedin-1-png.png" alt="linkedin link icon"></a>
+            </div>
+
+            <div class="github">
+                <a href="https://github.com/TeoFedyna" target="_blank"><img src="./images/CACA3.png" alt="github link icon"></a>
+            </div>
         </div>
 
         <script src="script.js"></script>
-    
+
     </footer>
 </body>
 
