buscador agregado a medias

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <header>
         <h1 class="titulo">EL ALQUMISTA BEBIDAS</title>
 
-            <img class="carrito" src="" alt="">
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+
+        <img class="carrito" src="" alt="">
+    
     </header>
 
     <main>
