evento agregar al carrito funciona

--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
                         src="./images/github_original_wordmark_logo_icon_146506.png" alt="github link icon"></a>
             </div>
         </div>
-
+        <!--  ejemplo de submit
         <form id="form">
             <input type="text">
             <button type="submit">hola</button>
         </form>
 
         <script src="script.js"></script>
-
+        -->
     </footer>
 </body>
 
