--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="navbar">
         <h1 class="titulo">EL ALQUMISTA BEBIDAS</h1>
 
-        <button class="navbar-toggler btn navBarBtn" type="button" data-bs-toggle="offcanvas"
+        <button class="navbar-toggler btn sideBarBtn" type="button" data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +30,7 @@
             aria-labelledby="offcanvasDarkNavbarLabel">
             <div class="offcanvas-header">
                 <div class="carritoHtml">
-                    <button id="carritoButtom"><img class="carritoImg" src="./images/shopping-cart_icon-icons.com_69913.png" title=""></button>
+                    <button id="carritoButtom" class="carritoButtom"><img class="carritoImg" src="./images/shopping_cart_market_ecommerce_icon_144576.png" title=""></button>
                     
                     <div id="carrito-contenedor">
                         
@@ -38,7 +38,7 @@
 
                     <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
 
-                    <button id="vaciar-carrito">Vaciar carrito</button>
+                    <button id="vaciar-carrito" class="vaciar-carrito">Vaciar carrito</button>
                 </div>
 
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -84,15 +84,6 @@
                 </form>
             </div>
         </div>
-
-        <!-- side var 
-        <div class="sideVar">
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
-    -->
     </header>
 
     <main>
