--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <script src="script.js"></script>
     </main>
 
-    <footer>
+    <footer class="footer">
 
         <div class="redesSociales">
             <div class="linkedin">
