--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
         <div id="bebidas" class="row"></div>
 
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.29/dist/sweetalert2.all.min.js"></script>
         <script src="script.js"></script>
     </main>
 
