--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <main>
         <h1 class="tituloMain">Nuestras Bebidas</h1>
 
-        <div id="bebidas" class="row"></div>
+        <div id="bebidas" class="bebidasList"></div>
 
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.29/dist/sweetalert2.all.min.js"></script>
         <script src="script.js"></script>
