--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
     <main>
         <h1 class="tituloMain">Nuestras Bebidas</h1>
 
-        <div id="bebidas" class="bebidasList"></div>
+        <div id="bebidas" class="bebidasList">
 
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.29/dist/sweetalert2.all.min.js"></script>
         <script src="script.js"></script>
+    </div>
     </main>
 
     <footer class="footer">
