comentario agregado en finalizar compra

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary"
-                            data-bs-dismiss="modal btnCancelar">Cancelar</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal btnCancelar">Cancelar</button>
                         <button type="submit" id="fCompra" class="btn btn-primary fCompra" data-bs-toggle="modal" data-bs-target="#ultimoModal">finalizar compra</button>
                     </div>
                 </form>
